--- a/TesisMarco/Views/Shared/_Layout.cshtml
+++ b/TesisMarco/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
 
     <!-- Custom styles for this template-->
     <link href="~/css/sb-admin-2.min.css" rel="stylesheet">
+    <script src="~/vendor/jquery/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
 
 </head>
 
@@ -76,7 +81,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Personalizados:</h6>
-                        <a class="collapse-item" href="@Url.Action("Index","Preguntas")">Preguntas</a>
+                        <a class="collapse-item" href="@Url.Action("Index","Preguntas")">FURAG Formularios</a>
                     </div>
                 </div>
             </li>
