--- a/TesisMarco/Views/Preguntas/_CrearFormulario.cshtml
+++ b/TesisMarco/Views/Preguntas/_CrearFormulario.cshtml
@@ -144,8 +144,7 @@
                 if (result.ok) {
                     alert('Se ha guardado de forma satisfactoria.');
 
-                    window.location.href = '/Preguntas/Index';
-
+                    window.location.href = '@Url.Action("Index", "Preguntas")';
 
                 } else {
                     alert(result.mensaje);
