--- a/TesisMarco/Views/Usuarios/Index.cshtml
+++ b/TesisMarco/Views/Usuarios/Index.cshtml
@@ -18,11 +18,24 @@
         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.IdTipoUsuario)
+        @Html.Label("Tipo usuario")
         @Html.DropDownListFor(m => m.IdTipoUsuario, new SelectList(new[] { new { Value = "1", Text = "Administrador" }, new { Value = "2", Text = "Usuario" } }, "Value", "Text"), "Seleccione...", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.IdTipoUsuario, "", new { @class = "text-danger" })
     </div>
+
+    <div class="form-group">
+        @Html.Label("Entidad")
+        @Html.DropDownListFor(m => m.IdEntidad, ViewBag.Entidades as SelectList, "Seleccione...", new { @class = "form-control select2" })
+        @Html.ValidationMessageFor(m => m.IdEntidad, "", new { @class = "text-danger" })
+    </div>
+
     <button type="submit" class="btn btn-primary">Crear</button>
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 }
+<!-- jQuery v3.6.0 -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Select2 -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
